--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "firebase": "^12.6.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
